deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-scheduling-service
  labels:
    app: appointment-scheduling-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-scheduling-service
  template:
    metadata:
      labels:
        app: appointment-scheduling-service
    spec:
      containers:
        - name: appointment-scheduling-service
          image: gcr.io/healthsync-443607/appointment-scheduling-service:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /api/v1/appointment-scheduling-service/actuator/health
            initialDelaySeconds: 40
            periodSeconds: 10
          livenessProbe:
            httpGet:
              port: 8080
              path: /api/v1/appointment-scheduling-service/actuator/health
            initialDelaySeconds: 40
            periodSeconds: 10
          resources:
            requests:
              cpu: "300m"
              memory: "400Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
