service.yml
apiVersion: v1
kind: Service
metadata:
  name: appointment-scheduling-service
spec:
  selector:
    app: appointment-scheduling-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
